<!--
  ~ Copyright (c) 2015.
  ~ Coded by Tesla.
  ~ All rights reserved.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
    android:layout_height="wrap_content" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="game1.comet.tesla.kevintheory.AboutUs"
    android:background="#fff">

    <ImageView
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:id="@+id/imageView"
        android:src="@drawable/back_kurumi"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/text24"
        android:id="@+id/button6"
        android:onClick="callMe"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:background="@drawable/button5"
        android:textColor="#000"
        android:textSize="12sp" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:text="@string/text16"
        android:id="@+id/button7"
        android:background="@drawable/button3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:onClick="returnToMainFromAbout"
        android:layout_alignParentEnd="true"
        android:textColor="#000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView5"
        android:text="@string/text20"
        android:textSize="15dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text28"
        android:id="@+id/AboutUs1"
        android:layout_above="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text27"
        android:id="@+id/AboutUs2"
        android:layout_above="@+id/AboutUs1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text26"
        android:id="@+id/AboutUs3"
        android:layout_above="@+id/AboutUs2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text25"
        android:id="@+id/AboutUs4"
        android:layout_above="@+id/AboutUs3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text29"
        android:id="@+id/AboutUs5"
        android:layout_above="@+id/AboutUs4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="12sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text31"
        android:id="@+id/button2"
        android:layout_above="@+id/button6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/button5"
        android:textColor="#000"
        android:onClick="doSendSMSTo"
        android:layout_alignRight="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:textSize="12sp" />

</RelativeLayout>
