<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="game1.comet.tesla.kevintheory.Start">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/Logo"
        android:src="@drawable/logo"
        android:visibility="invisible"
        xmlns:tools="http://schemas.android.com/tools"
        tools:visibility="visible"
        android:layout_above="@+id/show_view2"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text09"
        android:id="@+id/show_view2"
        android:visibility="visible"
        android:alpha="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ncFloat"
        tools:background="@drawable/nc_anim1"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text10"
        android:id="@+id/show_view3"
        android:layout_below="@+id/show_view2"
        android:layout_alignRight="@+id/show_view5"
        android:layout_alignEnd="@+id/show_view5"
        android:visibility="visible"
        android:alpha="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text11"
        android:id="@+id/show_view4"
        android:layout_below="@+id/show_view3"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:alpha="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text12"
        android:id="@+id/show_view5"
        android:layout_below="@+id/show_view4"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        android:alpha="1" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text01"
        android:id="@+id/Login"
        android:visibility="visible"
        android:onClick="gettingStarted"
        android:background="@drawable/button2"
        android:textColor="#FF441151"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="39dp"
        android:layout_marginEnd="39dp"
        android:layout_marginBottom="45dp"/>

</RelativeLayout>
